[tool.poetry]
name = "harriet"
version = "0.1.0"
description = "Integrate DRF and Channels-based websockets."
authors = ["Kit La Touche <kit@transneptune.net>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.0"
djangorestframework = "^3.9"
channels = "^2.2"

[tool.poetry.dev-dependencies]
black = "^18.9b0"
coverage = "*"
flake8 = "*"
isort = "*"
pytest-cov = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
tox = "*"

[tool.black]
py36 = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
